[package]
name = "cryptopals"
version = "0.1.0"
authors = ["dato <dato@net.com.org.es>"]
edition = "2018"

[dependencies]
url = "1.7.2"
rand = "0.6.3"
indoc = "0.3.1"
openssl = "0.10.16"
lazy_static = "1.2.0"
data-encoding = "2.1.2"
simple-error = "0.1.13"

[profile.dev]
opt-level = 3

[profile.test]
opt-level = 3
